tests/fixtures/valid/escape_hex.mmd
flowchart TD
    Start --> A[println '\\x48\\x65\\x6C\\x6C\\x6F']
    A --> End
