tests/fixtures/invalid/missing_end.mmd
flowchart TD
    Start --> A[x = 1]
    A --> B[println x]
